--- a/IntMicSrvOne/charts/IntMicSrvTwo/requirements.yaml
+++ b/IntMicSrvOne/charts/IntMicSrvTwo/requirements.yaml
@@ -11,23 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-name: IntMicSrvCommon
-version: 1.0.0
-description: This helm chart is used by the IBM App Connect Dashboard to deploy servers
-keywords:
-  - Limited
-  - amd64
-  - ICP
-  - ACE
-  - Integration
-  - IIB
-  - WMB
-  - MQSI
-  - Websphere
-  - Message
-  - Broker
-  - Bus
-icon:  https://raw.githubusercontent.com/ot4i/ace-helm/master/integration_server.svg?sanitize=true
-tillerVersion: ">=2.9.1"
-kubeVersion: ">=1.11.1"
+dependencies:
+  - name: ibm-sch
+    repository: "@sch" # sch is based on [NAME] from the cmd: helm repo add [flags] [NAME] [URL]
+    version: 1.2.5
+    alias: sch
