--- a/IntMicSrvOne/charts/IntMicSrvTwo/templates/secret.yaml
+++ b/IntMicSrvOne/charts/IntMicSrvTwo/templates/secret.yaml
@@ -12,22 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- include "sch.config.init" (list . "ibm-ace.sch.chart.config.values") }}
-{{- $ssName := include "sch.names.statefulSetName" (list .) }}
-{{- $deploymentName := include "sch.names.fullName" (list .) }}
-{{- $secretName := ternary $ssName $deploymentName .Values.queueManagerEnabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $secretName }}
+  name: {{ include "fullname" . }}
   labels:
-{{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
+    app: {{ .Chart.Name }}
+    chart: {{ .Chart.Name }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 type: Opaque
 data:
   {{- if .Values.queueManagerEnabled }}
-    {{- if .Values.queueManager.mqsc }}
-  mqsc: {{ .Values.queueManager.mqsc | b64enc }}
-    {{- end }}
     {{- if .Values.queueManager.dev.adminPassword }}
   adminPassword: {{ .Values.queueManager.dev.adminPassword | b64enc | quote }}
     {{- else }}
@@ -35,6 +31,9 @@ data:
     {{- end }}
     {{- if .Values.queueManager.dev.appPassword }}
   appPassword: {{ .Values.queueManager.dev.appPassword | b64enc | quote }}
+    {{- end }}
+    {{- if .Values.queueManager.mqsc }}
+  mqsc: {{ .Values.queueManager.mqsc | b64enc }}
     {{- end }}
   {{- end }}
   {{- if .Values.integrationServer.keystore.password }}
@@ -72,6 +71,7 @@ data:
   {{- if .Values.integrationServer.setdbparms }}
   setdbparms: {{ .Values.integrationServer.setdbparms | b64enc }}
   {{- end }}
-  viewerusers: {{ print "ibm-ace-dashboard-viewer " (uuidv4) | b64enc }}
-  adminusers: ""
-
+  {{- if or .Values.integrationServer.viewerusers .Values.integrationServer.adminusers}}
+  viewerusers: {{ .Values.integrationServer.viewerusers | b64enc }}
+  adminusers: {{ .Values.integrationServer.adminusers | b64enc }}
+  {{- end }}
