--- a/IntMicSrvOne/charts/IntMicSrvTwo/templates/metrics-service-ace.yaml
+++ b/IntMicSrvOne/charts/IntMicSrvTwo/templates/metrics-service-ace.yaml
@@ -13,16 +13,20 @@
 # limitations under the License.
 
 {{- if .Values.metrics.enabled }}
-{{- include "sch.config.init" (list . "ibm-ace.sch.chart.config.values") }}
+{{ $name := include "fullname" . }}
+{{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
 metadata:
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9483'
-  name: {{ include "sch.names.fullCompName" (list . "ace-metrics") }}
+  name: {{ $serviceName }}
   labels:
-{{ include "sch.metadata.labels.standard" (list . "") | indent 4 }}
+    app: {{ .Chart.Name }}
+    chart: {{ .Chart.Name }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   type: ClusterIP
   ports:
@@ -30,6 +34,6 @@ spec:
     port: 9483
     protocol: TCP
   selector:
-    app: "{{ include "sch.names.appName" (list .) }}"
+    app: "{{ .Chart.Name }}"
     release: "{{ .Release.Name }}"
 {{- end }}
