--- a/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
@@ -15,9 +15,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ .Chart.Name }}
+    app: {{ template "fullname" . }}
     chart: {{ .Chart.Name }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
