--- a/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
@@ -15,10 +15,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ include "fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: {{ .Chart.Name }}
+    chart: {{ .Chart.Name }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 type: Opaque
