--- a/intmicsrvone/templates/secret.yaml
+++ b/intmicsrvone/templates/secret.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ "ace11002mqc91intmsall-one" . }}
+  name: {{ template "ace11002mqc91intmsall-one" . }}
   labels:
     app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
