--- a/intmicsrvone/templates/secret.yaml
+++ b/intmicsrvone/templates/secret.yaml
@@ -15,7 +15,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "fullname" . }}
+#  name: {{ include "fullname" . }}
+  name: {{ .Release.Name-.Chart.Name . }}
+
   labels:
     app: {{ .Chart.Name }}
     chart: {{ .Chart.Name }}
