--- a/intmicsrvone/templates/secret.yaml
+++ b/intmicsrvone/templates/secret.yaml
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: Secret
 metadata:
 #  name: {{ include "fullname" . }}
-  name: {{ .Release.Name-.Chart.Name . }}
+  name: {{ .Release.Name}}-{{.Chart.Name }}
 
   labels:
     app: {{ .Chart.Name }}
