--- a/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/secret.yaml
@@ -15,7 +15,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "fullname" . }}
+#  name: {{ include "fullname" . }}
+  name: {{ .Release.Name}}-{{.Chart.Name }}
   labels:
     app: {{ .Chart.Name }}
     chart: {{ .Chart.Name }}
