--- a/intmicsrvone/templates/service.yaml
+++ b/intmicsrvone/templates/service.yaml
@@ -16,7 +16,8 @@ apiVersion: v1
 kind: Service
 metadata:
 #  name: {{ include "fullname" . }}
-  name: {{ .Release.Name}}-{{.Chart.Name }}
+#  name: {{ .Release.Name}}-{{.Chart.Name }}
+  name: {{ .Release.Name}}
   labels:
     app: {{ .Chart.Name }}
     chart: {{ .Chart.Name }}
