metrics-service Signed-off-by: DAVID ARNOLD <davearno@au1.ibm.com>

--- a/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
@@ -13,7 +13,8 @@
 # limitations under the License.
 
 {{- if .Values.metrics.enabled }}
-{{ $name := include "fullname" . }}
+#{{ $name := include "fullname" . }}
+{{ $name := .Release.Name-.Chart.Name . }}
 {{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
