--- a/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
@@ -14,7 +14,7 @@
 
 {{- if .Values.metrics.enabled }}
 #{{ $name := include "fullname" . }}
-{{ $name := default Chart.Name . }}
+{{ $name := default .Chart.Name . }}
 {{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
