--- a/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
@@ -15,7 +15,7 @@
 {{- if .Values.metrics.enabled }}
 #{{ $name := include "fullname" . }}
 #{{ $name := default .Chart.Name . }}
-{{ $name := "intmicsrvone" }}
+{{ $name := "intmicsrvtwo" }}
 {{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
