--- a/intmicsrvone/charts/intmicsrvtwo/templates/deployment.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/deployment.yaml
@@ -167,24 +167,10 @@ spec:
               - NET_BIND_SERVICE
               - SYS_CHROOT
               - SETFCAP
-          # Set liveness probe to determine if the Integration Server is running
-          livenessProbe:
-            exec:
-              command:
-              - chkacehealthy
-            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
-            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
-            failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
-          # Set readiness probe to determine if the Integration Server admin endpoint is running
-          readinessProbe:
-            exec:
-              command:
-              - chkaceready
-            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
-            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
-            failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+          # Set liveness probe to determine if the Integration Server is running (removed)
+
+          # Set readiness probe to determine if the Integration Server admin endpoint is running (removed)
+
           resources:
             limits:
 {{ toYaml .Values.aceonly.resources.limits | indent 14 }}
