--- a/intmicsrvone/templates/service.yaml
+++ b/intmicsrvone/templates/service.yaml
@@ -16,8 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
 #  name: {{ include "fullname" . }}
-#  name: {{ .Release.Name}}-{{.Chart.Name }}
-  name: {{ .Release.Name}}
+  name: {{ .Release.Name}}-{{.Chart.Name }}
   labels:
     app: {{ .Chart.Name }}
     chart: {{ .Chart.Name }}
