--- a/intmicsrvone/templates/metrics-service-ace.yaml
+++ b/intmicsrvone/templates/metrics-service-ace.yaml
@@ -14,8 +14,8 @@
 
 {{- if .Values.metrics.enabled }}
 #{{ $name := include "fullname" . }}
-#{{ $name := default .Chart.Name . }}
-{{ $name := "intmicsrvone" }}
+{{ $name := .Chart.Name }}
+#{{ $name := "intmicsrvone" }}
 {{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
