correcting deployment name to variables
Signed-off-by: DAVID ARNOLD <davearno@au1.ibm.com>

--- a/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
+++ b/intmicsrvone/charts/intmicsrvtwo/templates/metrics-service-ace.yaml
@@ -14,8 +14,8 @@
 
 {{- if .Values.metrics.enabled }}
 #{{ $name := include "fullname" . }}
-#{{ $name := default .Chart.Name . }}
-{{ $name := "intmicsrvtwo" }}
+{{ $name := .Chart.Name }}
+#{{ $name := "intmicsrvtwo" }}
 {{ $serviceName := print $name "-a-m" }}
 apiVersion: v1
 kind: Service
