--- a/intmicsrvone/values.yaml
+++ b/intmicsrvone/values.yaml
@@ -31,7 +31,9 @@ image:
     # name of the ace with mq server image
     acemq: "ibmcom/ace-mq"
   # tag is the tag to use for the container repository
-  tag: latest
+  #tag: latest
+  tag: 42ed32c
+  
   # pullPolicy of IfNotPresent causes image pulling to be skipped if it already exists. Change to Always to force a pull.
   pullPolicy: IfNotPresent
   # pullSecret is the secret to use when pulling the image from a private registry
